--- a/neeza-agent/.gitignore
+++ b/neeza-agent/.gitignore
@@ -21,8 +21,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-.idea
-/.idea
 
 .settings/
 .project
@@ -37,6 +35,7 @@ hs_err_pid*
 *.log
 /conf/
 /disconf/
+p-trade-oc.iml
 launch.json
 settings.json
 .factorypath
