--- a/neeza-server/.gitignore
+++ b/neeza-server/.gitignore
@@ -21,8 +21,7 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-.idea
-/.idea
+
 
 .settings/
 .project
@@ -34,16 +33,14 @@ hs_err_pid*
 .DS_Store
 *.iml
 *.iml/
-*.log
 /conf/
 /disconf/
+p-trade-oc.iml
 launch.json
 settings.json
 .factorypath
 /.vscode/
-.project
 .classpath
-.settings/
 target/
 .vscode/
 .iml
