--- a/neeza-client/pom.xml
+++ b/neeza-client/pom.xml
@@ -4,14 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>top.moxingwang.simple-mock</groupId>
+    <groupId>top.moxingwang.neeza</groupId>
     <artifactId>neeza-client</artifactId>
     <version>1.0.1-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
-            <groupId>top.moxingwang.simple-mock</groupId>
-            <artifactId>simple-mock-core</artifactId>
+            <groupId>top.moxingwang.neeza</groupId>
+            <artifactId>neeza-core</artifactId>
             <version>1.0.1-SNAPSHOT</version>
         </dependency>
 
