--- a/neeza-core/pom.xml
+++ b/neeza-core/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>top.moxingwang.simple-mock</groupId>
+    <groupId>top.moxingwang.neeza</groupId>
     <artifactId>neeza-core</artifactId>
     <version>1.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
