--- a/neeza-server/pom.xml
+++ b/neeza-server/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>top.moxingwang.neeza</groupId>
     <artifactId>neeza-server</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>${neeza.version}</version>
 
     <properties>
         <java.version>1.8</java.version>
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>top.moxingwang.neeza</groupId>
             <artifactId>neeza-core</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
+            <version>${neeza.version}</version>
         </dependency>
 
     </dependencies>
