change <groupId>top.moxingwang.neeza</groupId> to <groupId>io.github.hotspacode</groupId>

--- a/neeza-test/pom.xml
+++ b/neeza-test/pom.xml
@@ -4,13 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>top.moxingwang.neeza</groupId>
+    <groupId>io.github.hotspacode</groupId>
     <artifactId>neeza-test</artifactId>
     <version>${neeza.version}</version>
 
     <dependencies>
         <dependency>
-            <groupId>top.moxingwang.neeza</groupId>
+            <groupId>io.github.hotspacode</groupId>
             <artifactId>neeza-core</artifactId>
             <version>${neeza.version}</version>
         </dependency>
