--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>top.moxingwang.neeza</groupId>
+    <groupId>io.github.hotspacode</groupId>
     <artifactId>neeza</artifactId>
     <version>${neeza.version}</version>
     <packaging>pom</packaging>
