--- a/neeza-server/pom.xml
+++ b/neeza-server/pom.xml
@@ -11,7 +11,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <groupId>top.moxingwang.neeza</groupId>
+    <groupId>io.github.hotspacode</groupId>
     <artifactId>neeza-server</artifactId>
     <version>${neeza.version}</version>
 
@@ -33,7 +33,7 @@
         </dependency>
 
         <dependency>
-            <groupId>top.moxingwang.neeza</groupId>
+            <groupId>io.github.hotspacode</groupId>
             <artifactId>neeza-core</artifactId>
             <version>${neeza.version}</version>
         </dependency>
