--- a/neeza-core/pom.xml
+++ b/neeza-core/pom.xml
@@ -9,6 +9,11 @@
     <version>${neeza.version}</version>
     <packaging>jar</packaging>
 
+    <properties>
+        <neeza.version>1.0.1-SNAPSHOT</neeza.version>
+        <java.version>1.8</java.version>
+    </properties>
+
     <dependencies>
 <!--        <dependency>
             <groupId>org.ow2.asm</groupId>
