--- a/neeza-spy/pom.xml
+++ b/neeza-spy/pom.xml
@@ -8,6 +8,11 @@
     <artifactId>neeza-spy</artifactId>
     <version>${neeza.version}</version>
 
+    <properties>
+        <neeza.version>1.0.1-SNAPSHOT</neeza.version>
+        <java.version>1.8</java.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>io.github.hotspacode</groupId>
