add     <parent>             <groupId>org.springframework.boot</groupId>             <artifactId>spring-boot-starter-parent</artifactId>             <version>2.1.9.RELEASE</version>             <relativePath/>         </parent>

--- a/neeza-server/pom.xml
+++ b/neeza-server/pom.xml
@@ -4,6 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.9.RELEASE</version>
+        <relativePath/>
+    </parent>
+
     <groupId>io.github.hotspacode</groupId>
     <artifactId>neeza-server</artifactId>
     <version>${neeza.version}</version>
@@ -33,18 +40,6 @@
         </dependency>
 
     </dependencies>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>2.1.9.RELEASE</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 
 
     <build>
