--- a/neeza-test/pom.xml
+++ b/neeza-test/pom.xml
@@ -16,6 +16,11 @@
     <dependencies>
         <dependency>
             <groupId>io.github.hotspacode</groupId>
+            <artifactId>neeza-deputy</artifactId>
+            <version>${neeza.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.hotspacode</groupId>
             <artifactId>neeza-core</artifactId>
             <version>${neeza.version}</version>
         </dependency>
