--- a/neeza-core/pom.xml
+++ b/neeza-core/pom.xml
@@ -21,6 +21,11 @@
             <version>7.0</version>
         </dependency>-->
         <dependency>
+            <groupId>io.github.hotspacode</groupId>
+            <artifactId>neeza-deputy</artifactId>
+            <version>${neeza.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.ow2.asm</groupId>
             <artifactId>asm-commons</artifactId>
             <version>7.0</version>
