--- a/neeza-test/pom.xml
+++ b/neeza-test/pom.xml
@@ -16,7 +16,7 @@
     <dependencies>
         <dependency>
             <groupId>io.github.hotspacode</groupId>
-            <artifactId>neeza-deputy</artifactId>
+            <artifactId>neeza-spy</artifactId>
             <version>${neeza.version}</version>
         </dependency>
         <dependency>
