--- a/neeza-server/neeza-server-integration-tomcat/pom.xml
+++ b/neeza-server/neeza-server-integration-tomcat/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.hotspacode</groupId>
-    <artifactId>neeza-server</artifactId>
+    <artifactId>neeza-server-integration-tomcat</artifactId>
     <version>${neeza.version}</version>
 
     <properties>
@@ -13,12 +13,6 @@
         <java.version>1.8</java.version>
     </properties>
 
-
-
-    <modules>
-        <module>neeza-server-standalone</module>
-        <module>neeza-server-integration-tomcat</module>
-    </modules>
 
 
 
