--- a/neeza-client/neeza-client-jar/pom.xml
+++ b/neeza-client/neeza-client-jar/pom.xml
@@ -5,21 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.hotspacode</groupId>
-    <artifactId>neeza-client</artifactId>
+    <artifactId>neeza-client-jar</artifactId>
     <version>${neeza.version}</version>
 
     <properties>
         <neeza.version>1.0.1-SNAPSHOT</neeza.version>
         <java.version>1.8</java.version>
     </properties>
-
-
-
-    <modules>
-        <module>neeza-client-jar</module>
-        <module>neeza-client-plugin-idea</module>
-        <module>neeza-client-commander</module>
-    </modules>
 
 
 
