--- a/neeza-client/neeza-client-api/pom.xml
+++ b/neeza-client/neeza-client-api/pom.xml
@@ -5,13 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.hotspacode</groupId>
-    <artifactId>neeza-store-common</artifactId>
+    <artifactId>neeza-client-plugin-api</artifactId>
     <version>${neeza.version}</version>
 
     <properties>
         <neeza.version>1.0.1-SNAPSHOT</neeza.version>
         <java.version>1.8</java.version>
     </properties>
+
 
 
 
