--- a/neeza-deputy/pom.xml
+++ b/neeza-deputy/pom.xml
@@ -14,10 +14,6 @@
         <java.version>1.8</java.version>
     </properties>
 
-    <dependencies>
-
-    </dependencies>
-
 
     <build>
         <plugins>
@@ -27,8 +23,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.2</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
