--- a/neeza-transport/neeza-transport-api/pom.xml
+++ b/neeza-transport/neeza-transport-api/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.hotspacode</groupId>
-    <artifactId>neeza-transport-common</artifactId>
+    <artifactId>neeza-transport-api</artifactId>
     <version>${neeza.version}</version>
 
     <properties>
@@ -28,8 +28,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.2</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
