--- a/neeza-client/neeza-client-api/pom.xml
+++ b/neeza-client/neeza-client-api/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.hotspacode</groupId>
-    <artifactId>neeza-client-plugin-api</artifactId>
+    <artifactId>neeza-client-api</artifactId>
     <version>${neeza.version}</version>
 
     <properties>
