--- a/neeza-transport/neeza-transport-netty-http/pom.xml
+++ b/neeza-transport/neeza-transport-netty-http/pom.xml
@@ -9,16 +9,30 @@
     <version>${neeza.version}</version>
 
     <properties>
-        <neeza.version>1.0.1-SNAPSHOT</neeza.version>
         <java.version>1.8</java.version>
+        <neeza.version>1.0.1-SNAPSHOT</neeza.version>
+        <netty.version>4.1.31.Final</netty.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>io.github.hotspacode</groupId>
+            <artifactId>neeza-transport-api</artifactId>
+            <version>${neeza.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.github.hotspacode</groupId>
             <artifactId>neeza-core</artifactId>
             <version>${neeza.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>${netty.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
