--- a/neeza-transport/neeza-transport-netty-http/pom.xml
+++ b/neeza-transport/neeza-transport-netty-http/pom.xml
@@ -7,6 +7,7 @@
     <groupId>io.github.hotspacode</groupId>
     <artifactId>neeza-transport-netty-http</artifactId>
     <version>${neeza.version}</version>
+    <packaging>jar</packaging>
 
     <properties>
         <java.version>1.8</java.version>
