--- a/neeza-transport/neeza-transport-netty-http/pom.xml
+++ b/neeza-transport/neeza-transport-netty-http/pom.xml
@@ -34,6 +34,13 @@
             <version>${netty.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
