--- a/neeza-core/pom.xml
+++ b/neeza-core/pom.xml
@@ -22,7 +22,7 @@
         </dependency>
         <dependency>
             <groupId>io.github.hotspacode</groupId>
-            <artifactId>neeza-deputy</artifactId>
+            <artifactId>neeza-base</artifactId>
             <version>${neeza.version}</version>
         </dependency>
         <dependency>
