--- a/neeza-transport/pom.xml
+++ b/neeza-transport/pom.xml
@@ -17,6 +17,7 @@
     <modules>
         <module>neeza-transport-api</module>
         <module>neeza-transport-netty-http</module>
+        <module>neeza-transport-client-http</module>
     </modules>
 
 
