--- a/neeza-transport/neeza-transport-api/pom.xml
+++ b/neeza-transport/neeza-transport-api/pom.xml
@@ -17,7 +17,7 @@
     <dependencies>
         <dependency>
             <groupId>io.github.hotspacode</groupId>
-            <artifactId>neeza-core</artifactId>
+            <artifactId>neeza-base</artifactId>
             <version>${neeza.version}</version>
         </dependency>
     </dependencies>
