--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,3 +2,7 @@ tasks:
   - init: mvn install -DskipTests=false
 image:
   file: .gitpod.Dockerfile
+
+vscode:
+  extensions:
+    - formulahendry.code-runner@0.9.15:WUpvbF4Wg44WiaFa7exZBw==
