--- a/neeza-store/neeza-store-api/pom.xml
+++ b/neeza-store/neeza-store-api/pom.xml
@@ -7,6 +7,7 @@
     <groupId>io.github.hotspacode</groupId>
     <artifactId>neeza-store-api</artifactId>
     <version>${neeza.version}</version>
+    <packaging>jar</packaging>
 
     <properties>
         <neeza.version>1.0.1-SNAPSHOT</neeza.version>
