--- a/neeza-agent/pom.xml
+++ b/neeza-agent/pom.xml
@@ -53,7 +53,7 @@
                             <Premain-Class>io.github.hotspacode.neeza.agent.Agent</Premain-Class>
                             <Main-Class>io.github.hotspacode.neeza.agent.Agent</Main-Class>
                             <Agent-Class>io.github.hotspacode.neeza.agent.Agent</Agent-Class>
-                            <Class-Path>tools.jar</Class-Path>
+                            <!-- <Class-Path>tools.jar</Class-Path> -->
                             <Can-Retransform-Classes>true</Can-Retransform-Classes>
                         </manifestEntries>
                     </archive>
