--- a/neeza-sample/neeza-test/pom.xml
+++ b/neeza-sample/neeza-test/pom.xml
@@ -35,13 +35,13 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
+        <!-- <dependency>
             <groupId>com.sun</groupId>
             <artifactId>tools</artifactId>
             <version>1.8</version>
             <scope>system</scope>
             <systemPath>${java.home}/../lib/tools.jar</systemPath>
-        </dependency>
+        </dependency> -->
     </dependencies>
 
 
