--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,3 +6,4 @@ image:
 vscode:
   extensions:
     - formulahendry.code-runner@0.9.15:WUpvbF4Wg44WiaFa7exZBw==
+    - awesomektvn.scratchpad@0.1.0:/FSncxsq88+nMc/Gq/DdVg==
