--- a/neeza-spy/pom.xml
+++ b/neeza-spy/pom.xml
@@ -19,6 +19,23 @@
             <artifactId>neeza-core</artifactId>
             <version>${neeza.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.github.hotspacode</groupId>
+            <artifactId>neeza-transport-api</artifactId>
+            <version>${neeza.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.hotspacode</groupId>
+            <artifactId>neeza-transport-netty-http</artifactId>
+            <version>${neeza.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.hotspacode</groupId>
+            <artifactId>neeza-transport-client-http</artifactId>
+            <version>${neeza.version}</version>
+        </dependency>
+
     </dependencies>
 
 
