--- a/neeza-sample/neeza-test/pom.xml
+++ b/neeza-sample/neeza-test/pom.xml
@@ -20,6 +20,11 @@
             <version>${neeza.version}</version>
         </dependency>
         <dependency>
+            <groupId>io.github.hotspacode</groupId>
+            <artifactId>neeza-core</artifactId>
+            <version>${neeza.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.esotericsoftware</groupId>
             <artifactId>kryo</artifactId>
             <version>4.0.1</version>
