--- a/neeza-sample/neeza-sample-spring-boot/pom.xml
+++ b/neeza-sample/neeza-sample-spring-boot/pom.xml
@@ -22,6 +22,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>io.github.hotspacode</groupId>
+            <artifactId>neeza-spy</artifactId>
+            <version>${neeza.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
