--- a/neeza-sample/neeza-sample-spring-boot/pom.xml
+++ b/neeza-sample/neeza-sample-spring-boot/pom.xml
@@ -53,6 +53,12 @@
             <artifactId>spring-tx</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.chinaredstar</groupId>
+            <artifactId>p-trade-oc-api</artifactId>
+            <version>3.0.73.RELEASE</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
