--- a/neeza-server/neeza-server-standalone/src/main/resources/application.properties
+++ b/neeza-server/neeza-server-standalone/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 server.servlet.context-path=/neeza
 server.port=8818
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost/db_neeza?characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=Mo@123456
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
