--- a/neeza-server/neeza-server-standalone/src/main/resources/application.properties
+++ b/neeza-server/neeza-server-standalone/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.username=root
 spring.datasource.password=Mo@123456
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+hibernate.dialect=mysql
