--- a/neeza-server/neeza-server-standalone/pom.xml
+++ b/neeza-server/neeza-server-standalone/pom.xml
@@ -48,7 +48,11 @@
             <artifactId>neeza-core</artifactId>
             <version>${neeza.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>io.github.hotspacode</groupId>
+            <artifactId>neeza-server-api</artifactId>
+            <version>${neeza.version}</version>
+        </dependency>
         <dependency>
             <groupId>io.github.hotspacode</groupId>
             <artifactId>neeza-transport-api</artifactId>
