--- a/neeza-server/neeza-server-api/pom.xml
+++ b/neeza-server/neeza-server-api/pom.xml
@@ -13,6 +13,13 @@
         <java.version>1.8</java.version>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>io.github.hotspacode</groupId>
+            <artifactId>neeza-core</artifactId>
+            <version>${neeza.version}</version>
+        </dependency>
+    </dependencies>
 
 
 
