--- a/neeza-server/neeza-server-standalone/src/main/resources/application.properties
+++ b/neeza-server/neeza-server-standalone/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.servlet.context-path=/neeza
 server.port=8818
+server.max-http-header-size=1024000
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost/db_neeza?characterEncoding=utf8
